--- a/index.html
+++ b/index.html
@@ -6,14 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>adaptive-lesson</title>
 </head>
 
 <body>
     <header>
-        header
+        <img src="assets/logo.svg" />
+        <ul>
+            <li>
+                <a href="#home">home</a>
+            </li>
+            <li>
+                <a href="#about">about</a>
+            </li>
+            <li>
+                <a href="#works">works</a>
+            </li>
+            <li>
+                <a href="#blog">blog</a>
+            </li>
+            <li>
+                <a href="#contact">contact</a>
+            </li>
+        </ul>
+        <button class="search">
+            <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M15.4138 13.8394L19.8574 18.2892C20.0558 18.5099 20.046 18.8479 19.8352 19.0568L19.0575 19.8355C18.9532 19.9408 18.8113 20 18.6632 20C18.5151 20 18.3731 19.9408 18.2688 19.8355L13.8252 15.3857C13.7023 15.2625 13.5907 15.1285 13.4919 14.9852L12.6587 13.8727C11.2802 14.9751 9.56825 15.5753 7.80409 15.5748C4.16878 15.5874 1.00983 13.0762 0.197438 9.52789C-0.614957 5.97956 1.13601 2.3411 4.41372 0.766571C7.69143 -0.807953 11.6211 0.101681 13.8763 2.95694C16.1314 5.81221 16.1102 9.85107 13.8252 12.6824L14.9361 13.45C15.1096 13.5612 15.2698 13.6918 15.4138 13.8394ZM2.25 7.78759C2.25 10.8595 4.73684 13.3498 7.80451 13.3498C9.27766 13.3498 10.6905 12.7638 11.7321 11.7207C12.7738 10.6776 13.359 9.2628 13.359 7.78759C13.359 4.71565 10.8722 2.22534 7.80451 2.22534C4.73684 2.22534 2.25 4.71565 2.25 7.78759Z"
+                    />
+            </svg>
+        </button>
+        <button class="burger">
+            <svg width="34" height="22" viewBox="0 0 34 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <line y1="1" x2="34" y2="1" stroke-width="2" />
+                <line y1="11" x2="34" y2="11" stroke-width="2" />
+                <line y1="21" x2="34" y2="21" stroke-width="2" />
+            </svg>
+        </button>
     </header>
     <main>
         main
