chnge context in var

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 
     </header>
     <main>
+
         <section class="banner">
             <h2>Manifest is a newborn theme.
                 Clean, simple and fast.</h2>
         </section>
+
         <section class="blog">
             <h1>Blog</h1>
             <div>
@@ -68,24 +70,113 @@
                     <h4>Technology, Interface Design</h4>
                     <h2>Using UX Design to Build a Sustainable Future</h2>
                     <h6>6 May, 2020</h6>
-                    <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</h5>
+                    <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a
+                        responsibility to use our influence to drive this.</h5>
                 </asrticle>
                 <figure>
-                    <img src="assets/picture/blog-picture-one.png" alt="blog"/>
-                </figure> 
+                    <img src="assets/picture/blog-picture-one.png" alt="blog" />
+                </figure>
             </div>
             <div>
                 <asrticle>
                     <h4>Technology, Interface Design</h4>
                     <h2>Using UX Design to Build a Sustainable Future</h2>
                     <h6>6 May, 2020</h6>
-                    <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a responsibility to use our influence to drive this.</h5>
+                    <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a
+                        responsibility to use our influence to drive this.</h5>
                 </asrticle>
                 <figure>
-                    <img src="assets/picture/blog-picture-two.png" alt="blog"/>
-                </figure> 
+                    <img src="assets/picture/blog-picture-two.png" alt="blog" />
+                </figure>
             </div>
         </section>
+
+        <section class="posts">
+            <label>
+                <h2>Latest Posts</h2>
+                <input type="checkbox" id="show-posts-toggle"/>
+                <i>&#8594</i>
+            </label>
+            <div>
+                <asrticle>
+                    <h3>UX traffic light colours</h3>
+                    <span>
+                        <h4>Interface Design</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-one.png" alt="post" />
+                </figure>
+            </div>
+            <div>
+                <asrticle>
+                    <h3>Using UX Design to Build a Sustainable Future</h3>
+                    <span>
+                        <h4>Technology</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-two.png" alt="post" />
+                </figure>
+            </div>
+            <div>
+                <asrticle>
+                    <h3>Creativity vs. UX</h3>
+                    <span>
+                        <h4>Visual Design</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-three.png" alt="post" />
+                </figure>
+            </div>
+            <div>
+                <asrticle>
+                    <h3>UX traffic light colours</h3>
+                    <span>
+                        <h4>Interface Design</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-one.png" alt="post" />
+                </figure>
+            </div>
+            <div>
+                <asrticle>
+                    <h3>Using UX Design to Build a Sustainable Future</h3>
+                    <span>
+                        <h4>Technology</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-two.png" alt="post" />
+                </figure>
+            </div>
+            <div>
+                <asrticle>
+                    <h3>Creativity vs. UX</h3>
+                    <span>
+                        <h4>Visual Design</h4>
+                        <h6>8 June, 2020</h6>
+                    </span>
+                    <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
+                </asrticle>
+                <figure>
+                    <img src="assets/posts/post-three.png" alt="post" />
+                </figure>
+            </div>
+        </section>
+
     </main>
     <footer>
         footer
