--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
         <section class="blog">
             <h1>Blog</h1>
             <div>
-                <asrticle>
+                <article>
                     <h4>Technology, Interface Design</h4>
                     <h2>Using UX Design to Build a Sustainable Future</h2>
                     <h6>6 May, 2020</h6>
                     <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a
                         responsibility to use our influence to drive this.</h5>
-                </asrticle>
+                </article>
                 <figure>
                     <img src="assets/picture/blog-picture-one.png" alt="blog" />
                 </figure>
             </div>
             <div>
-                <asrticle>
+                <article>
                     <h4>Technology, Interface Design</h4>
                     <h2>Using UX Design to Build a Sustainable Future</h2>
                     <h6>6 May, 2020</h6>
                     <h5>Transformation has to be driven by everybody, not just by climate groups, and we have a
                         responsibility to use our influence to drive this.</h5>
-                </asrticle>
+                </article>
                 <figure>
                     <img src="assets/picture/blog-picture-two.png" alt="blog" />
                 </figure>
@@ -94,86 +94,74 @@
         <section class="posts">
             <label>
                 <h2>Latest Posts</h2>
-                <input type="checkbox" id="show-posts-toggle"/>
+                <input type="checkbox" id="show-posts-toggle" />
                 <i>&#8594</i>
             </label>
             <div>
                 <figure>
                     <img src="assets/posts/post-one.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Interface Design</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>UX traffic light colours</h3>
-                    <span>
-                        <h4>Interface Design</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
             <div>
                 <figure>
                     <img src="assets/posts/post-two.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Technology</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>Using UX Design to Build a Sustainable Future</h3>
-                    <span>
-                        <h4>Technology</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
             <div>
                 <figure>
                     <img src="assets/posts/post-three.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Visual Design</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>Creativity vs. UX</h3>
-                    <span>
-                        <h4>Visual Design</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
             <div>
                 <figure>
                     <img src="assets/posts/post-one.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Interface Design</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>UX traffic light colours</h3>
-                    <span>
-                        <h4>Interface Design</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
             <div>
                 <figure>
                     <img src="assets/posts/post-two.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Technology</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>Using UX Design to Build a Sustainable Future</h3>
-                    <span>
-                        <h4>Technology</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
             <div>
                 <figure>
                     <img src="assets/posts/post-three.png" alt="post" />
                 </figure>
-                <asrticle>
+                <article>
+                    <h4>Visual Design</h4>
+                    <h6>8 June, 2020</h6>
                     <h3>Creativity vs. UX</h3>
-                    <span>
-                        <h4>Visual Design</h4>
-                        <h6>8 June, 2020</h6>
-                    </span>
                     <h5>UI has to make a huge visual difference between warning, an alert and a success.</h5>
-                </asrticle>
+                </article>
             </div>
         </section>
 
