--- a/index.html
+++ b/index.html
@@ -165,6 +165,122 @@
             </div>
         </section>
 
+        <section class="popular">
+            <label>
+                <h2>The Most Popular</h2>
+                <input type="checkbox" id="show-popular-toggle" />
+                <i>&#8594</i>
+            </label>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="assets/popular/popular-one.png" alt="popular">
+                    </figure>
+                    <article>
+                        <span>
+                            <h5>
+                                Interface Design
+                            </h5>
+                            <h6>
+                                8 June, 2020
+                            </h6>
+                        </span>
+                        <h4>
+                            Mentorship Match — How a simple LinkedIn feature can boost diversity
+                        </h4>
+                        <p>
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            workforce and as we learned — diversity and success go hand in hand
+                        </p>
+                    </article>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/popular/popular-two.png" alt="popular">
+                    </figure>
+                    <article>
+                        <span>
+                            <h5>
+                                Visual Design
+                            </h5>
+                            <h6>
+                                8 June, 2020
+                            </h6>
+                        </span>
+                        <h4>
+                            Creativity vs. UX
+                        </h4>
+                        <p>
+                            Is it possible to create a delightful user experience without following best UX practices?
+                        </p>
+                    </article>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/popular/popular-one.png" alt="popular">
+                    </figure>
+                    <article>
+                        <span>
+                            <h5>
+                                Interface Design
+                            </h5>
+                            <h6>
+                                8 June, 2020
+                            </h6>
+                        </span>
+                        <h4>
+                            Mentorship Match — How a simple LinkedIn feature can boost diversity
+                        </h4>
+                        <p>
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            workforce and as we learned — diversity and success go hand in hand
+                        </p>
+
+                    </article>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/popular/popular-two.png" alt="popular">
+                    </figure>
+                    <article>
+                        <span>
+                            <h5>
+                                Interface Design
+                            </h5>
+                            <h6>
+                                8 June, 2020
+                            </h6>
+                        </span>
+                        <h4>
+                            Mentorship Match — How a simple LinkedIn feature can boost diversity
+                        </h4>
+                        <p>
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            workforce and as we learned — diversity and success go hand in hand
+                        </p>
+                    </article>
+                </li>
+            </ul>
+            <button>
+                Load More
+            </button>
+            <article>
+                <h4>
+                    Full-time UI/UX designer
+                    Head of Design at VeronaLabs.com
+                    <i>&#8594</i>
+                </h4>
+                <p>
+                    <span>We work with clients around the world from our headquarters in Charleston, South
+                        Carolina.</span>
+                    <span>
+                        We focus on naming, branding, brand narratives, website design and development, and brand
+                        experiences.
+                    </span>
+                </p>
+            </article>
+        </section>
+
     </main>
     <footer>
         footer
