--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                             Mentorship Match — How a simple LinkedIn feature can boost diversity
                         </h4>
                         <p>
-                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the
+                            global
                             workforce and as we learned — diversity and success go hand in hand
                         </p>
                     </article>
@@ -232,7 +233,8 @@
                             Mentorship Match — How a simple LinkedIn feature can boost diversity
                         </h4>
                         <p>
-                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the
+                            global
                             workforce and as we learned — diversity and success go hand in hand
                         </p>
 
@@ -255,7 +257,8 @@
                             Mentorship Match — How a simple LinkedIn feature can boost diversity
                         </h4>
                         <p>
-                            LinkedIn is on a clear mission to make professionals more successful by connecting the global
+                            LinkedIn is on a clear mission to make professionals more successful by connecting the
+                            global
                             workforce and as we learned — diversity and success go hand in hand
                         </p>
                     </article>
@@ -283,7 +286,47 @@
 
     </main>
     <footer>
-        footer
+        <h2>Need a project?</h2>
+        <a href="tel: #" class="tel">(239) 555-0108</a>
+        <a href="mailto: #" class="email">tanya.hill@example.com</a>
+        <ul>
+            <li>
+                <a href="#">
+                    <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M12.5024 5.8467C9.09642 5.8467 6.34913 8.594 6.34913 12C6.34913 15.406 9.09642 18.1533 12.5024 18.1533C15.9084 18.1533 18.6557 15.406 18.6557 12C18.6557 8.594 15.9084 5.8467 12.5024 5.8467ZM12.5024 16.0004C10.3014 16.0004 8.50198 14.2064 8.50198 12C8.50198 9.7936 10.296 7.99955 12.5024 7.99955C14.7088 7.99955 16.5029 9.7936 16.5029 12C16.5029 14.2064 14.7035 16.0004 12.5024 16.0004ZM20.3427 5.595C20.3427 6.39295 19.7 7.03024 18.9074 7.03024C18.1095 7.03024 17.4722 6.38759 17.4722 5.595C17.4722 4.80241 18.1148 4.15977 18.9074 4.15977C19.7 4.15977 20.3427 4.80241 20.3427 5.595ZM24.4181 7.05166C24.327 5.12909 23.8879 3.42608 22.4794 2.02298C21.0763 0.619882 19.3733 0.180743 17.4508 0.0843468C15.4693 -0.0281156 9.53021 -0.0281156 7.54873 0.0843468C5.63151 0.175388 3.92851 0.614526 2.52005 2.01763C1.1116 3.42073 0.677813 5.12373 0.581417 7.0463C0.468955 9.02778 0.468955 14.9669 0.581417 16.9483C0.672458 18.8709 1.1116 20.5739 2.52005 21.977C3.92851 23.3801 5.62616 23.8193 7.54873 23.9157C9.53021 24.0281 15.4693 24.0281 17.4508 23.9157C19.3733 23.8246 21.0763 23.3855 22.4794 21.977C23.8825 20.5739 24.3217 18.8709 24.4181 16.9483C24.5305 14.9669 24.5305 9.03314 24.4181 7.05166ZM21.8582 19.0744C21.4405 20.1241 20.6318 20.9327 19.5768 21.3558C17.997 21.9824 14.2483 21.8378 12.5024 21.8378C10.7566 21.8378 7.00248 21.977 5.42801 21.3558C4.37836 20.9381 3.5697 20.1294 3.14663 19.0744C2.52005 17.4946 2.66465 13.7458 2.66465 12C2.66465 10.2542 2.52541 6.50006 3.14663 4.92558C3.56435 3.87593 4.373 3.06728 5.42801 2.6442C7.00784 2.01763 10.7566 2.16222 12.5024 2.16222C14.2483 2.16222 18.0024 2.02298 19.5768 2.6442C20.6265 3.06192 21.4352 3.87058 21.8582 4.92558C22.4848 6.50541 22.3402 10.2542 22.3402 12C22.3402 13.7458 22.4848 17.4999 21.8582 19.0744Z"/>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <svg width="13" height="24" viewBox="0 0 13 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M12.084 13.5L12.7505 9.15656H8.58289V6.33797C8.58289 5.14969 9.16508 3.99141 11.0316 3.99141H12.9263V0.293438C12.9263 0.293438 11.207 0 9.56305 0C6.13086 0 3.88742 2.08031 3.88742 5.84625V9.15656H0.0722656V13.5H3.88742V24H8.58289V13.5H12.084Z"/>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <svg width="31" height="24" viewBox="0 0 31 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M27.2371 5.98123C27.2559 6.24372 27.2559 6.50626 27.2559 6.76875C27.2559 14.775 21.1622 24 10.0246 24C6.59335 24 3.40587 23.0062 0.724609 21.2813C1.21213 21.3375 1.68083 21.3563 2.18711 21.3563C5.01831 21.3563 7.6246 20.4 9.70586 18.7688C7.04335 18.7125 4.8121 16.9688 4.04333 14.5687C4.41836 14.625 4.79334 14.6625 5.18713 14.6625C5.73086 14.6625 6.27465 14.5874 6.78087 14.4563C4.00588 13.8937 1.92456 11.4562 1.92456 8.51249V8.43752C2.73078 8.88752 3.66836 9.16877 4.66204 9.20622C3.03078 8.1187 1.96207 6.26247 1.96207 4.16246C1.96207 3.03748 2.26202 2.00623 2.78705 1.10622C5.76832 4.78122 10.2496 7.18118 15.2745 7.44372C15.1808 6.99372 15.1245 6.52502 15.1245 6.05626C15.1245 2.71872 17.8246 0 21.1808 0C22.9245 0 24.4995 0.731248 25.6058 1.9125C26.9745 1.65001 28.287 1.14374 29.4496 0.450003C28.9995 1.85628 28.0433 3.03754 26.7871 3.78748C28.0058 3.6563 29.1871 3.31872 30.2745 2.85002C29.4497 4.04997 28.4184 5.11868 27.2371 5.98123Z"/>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M5.87177 24H0.895949V7.97643H5.87177V24ZM3.38118 5.79066C1.79008 5.79066 0.499512 4.47278 0.499512 2.88167C0.499512 2.1174 0.803116 1.38444 1.34353 0.844022C1.88395 0.303604 2.61692 0 3.38118 0C4.14545 0 4.87841 0.303604 5.41883 0.844022C5.95925 1.38444 6.26285 2.1174 6.26285 2.88167C6.26285 4.47278 4.97175 5.79066 3.38118 5.79066ZM24.4947 24H19.5296V16.1998C19.5296 14.3409 19.4921 11.9569 16.9426 11.9569C14.3555 11.9569 13.9591 13.9766 13.9591 16.0659V24H8.98863V7.97643H13.7609V10.1622H13.8305C14.4948 8.90323 16.1175 7.57463 18.5385 7.57463C23.5743 7.57463 24.5 10.8908 24.5 15.198V24H24.4947Z"/>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        <h4>
+            © Copyright Manifest Theme.
+            Allrights reserved
+        </h4>
     </footer>
 </body>
 
